Bug 327510 XML Parsing Error: no element found/netError.xhtml on newsgroup msg download timout. r=Neil,sr=bienvenu