mail/base/content/mailWindow.js
@@ -168,6 +168,8 @@ function InitMsgWindow()
   getBrowser().docShell.allowAuth = false;
   msgWindow.rootDocShell.allowAuth = true;
   msgWindow.rootDocShell.appType = Components.interfaces.nsIDocShell.APP_TYPE_MAIL;
+  // Ensure we don't load xul error pages into the main window
+  msgWindow.rootDocShell.useErrorPages = false;
 }
 
 function AddDataSources()
